<resources>
    <string name="app_name">Kanema</string>

    <string name="movie_layout_content_description">Movie Poster</string>
    <string name="movie_layout_movie_title">No content title</string>
    <string name="movie_layout_movie_date">Movie date</string>


    <string name="actor_layout_content_description">Actor Profile</string>
    <string name="actor_layout_actor_name">Actor Name</string>
    <string name="actor_layout_actor_character">Actor Character being played</string>

    <string name="view_space_placeholder">View space placeholder</string>


    <!-- Menu -->
    <string name="menu_item_popularity">Sort by popularity</string>
    <string name="menu_item_rating">Sort by rating</string>
    <string name="menu_settings">Settings</string>

    <!-- ListPreference Entertainment -->
    <string name="entertainment_label">Entertainment Type</string>
    <string name="entertainment_key">entertainment_type</string>

    <string name="entertainment_movies">Movies</string>
    <string name="entertainment_series">TV Series</string>
    <string name="entertainment_starred">Starred</string>

    <string name="entertainment_movies_key">content</string>
    <string name="entertainment_series_key">tv_series</string>
    <string name="entertainment_starred_key">starred</string>

</resources>
