<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin_component"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/actor_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/actor_layout_content_description"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/actor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_relative"
            android:textSize="@dimen/activity_text_paragraph"
            android:textStyle="bold"
            android:gravity="center_vertical"
            tools:text="@string/actor_layout_actor_name"/>

        <TextView
            android:id="@+id/actor_character"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_relative"
            android:textSize="@dimen/activity_text_subparagraph"
            android:gravity="center_vertical"
            tools:text="@string/actor_layout_actor_character"/>

    </LinearLayout>

</LinearLayout>