<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center"
    tools:background="@color/colorBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_margin="@dimen/activity_margin_component"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@mipmap/ic_launcher"
                android:contentDescription="@string/movie_layout_content_description"/>

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_component"
                android:textSize="@dimen/activity_text_subheader"
                android:textStyle="bold"
                android:textColor="@color/colorIcons"
                android:text="@string/movie_layout_movie_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/movie_rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:theme="@style/RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/movie_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:alpha="0.8"
                    android:layout_margin="@dimen/activity_margin_relative"
                    android:textSize="@dimen/activity_text_subparagraph"
                    android:textStyle="bold"
                    android:textColor="@color/colorIcons"
                    android:text="@string/movie_layout_movie_date"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>